Fix .container spacing

--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,10 @@ body {
 }
 
 .container {
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  row-gap: 32px;
+  gap: 32px;
 }
 
 .chessboardcontainer{
